Added search functionality

--- a/mytube/templates/main/navbar.html
+++ b/mytube/templates/main/navbar.html
@@ -6,9 +6,9 @@
                     <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 </li>
                 <li class="search">
-                    <form>
+                    <form action="{{ url_for('main_routes.home') }}" method="post" autocomplete="off">
                         <div class="input-field">
-                            <input id="search" type="search" required autocomplete="off">
+                            <input id="search" name="search" type="search" required autocomplete="off">
                             <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                             <i class="material-icons">close</i>
                         </div>
